# Architech

./: .gitignore  CHANGELOG.md  DEVELOPMENT_PLAN.md  ERROR_ANALYSIS_AND_RESOLUTION_PLAN.md  IMPROVEMENTS-SUMMARY.md  LINTING_RESOLUTION_PLAN.md  Planificateur_Weekend.xlsx  QUICK_FIX_GUIDE.md  README-enhancements.md  README.md  biome.json  build-sidecar.js  eslint.config.mjs  excelH.py  guidelines.md  hashguard_financial_model.xlsx  next.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  script.py  tailwind.config.js  thechain2.html  tsconfig.json
.cursor/rules/: clean-code.mdc  tauri.mdc
data/frameworks/: app.json  desktop.json  web.json
data/modules/: advanced.json  forms.json  i18n.json  modules.json  state.json  styling.json  testing.json  ui.json
nodejs-sidecar/: README.md  build.js  index.js  package-lock.json  package.json
scripts/: fix-linting.sh  phase1-fixes.sh
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: nodejs-sidecar  nodejs-sidecar-aarch64-apple-darwin  nodejs-sidecar-direct.js
src-tauri/capabilities/: default.json
src-tauri/src/: README.md  generation.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: command_runner.rs  file.rs  framework.rs  mod.rs  node_commands.rs  project.rs  system.rs  template.rs
src-tauri/src/tasks/: cleanup.rs  directory.rs  framework.rs  mod.rs  module.rs
src-tauri/template-data/modules/: tailwind.json
src-tauri/template-data/templates/nextjs/: base.json  saas.json
src-tauri/template-files/i18n/: middleware.ts
src-tauri/template-files/i18n/lib/: i18n.ts
src-tauri/template-files/i18n/messages/: en.json  fr.json
src-tauri/template-files/state/: store-provider.tsx  store.ts
src/app/: layout.tsx  page.tsx
src/app/frameworks/: page.tsx
src/app/landing/: page.tsx
src/app/migration/: page.tsx
src/app/modules/: page.tsx
src/app/new-project/: page.tsx
src/app/settings/: page.tsx
src/app/templates/: page.tsx
src/app/test-components/: page.tsx
src/components/: NodeCommandExecutor.tsx  ThemeProvider.tsx  ThemeToggle.tsx
src/components/ui/: Card.tsx  (+12 more)
src/lib/: nodejs.ts
src/styles/: globals.css
src/types/: tauri.d.ts
template-data/frameworks/: app.json  desktop.json  web.json
template-data/modules/: auth.json  daisyui.json  dashboard.json  forms.json  i18n.json  state.json  testing.json  ui.json
template-files/auth/: auth.ts  authOptions.ts  providers.ts
template-files/dashboard/: dashboard-layout.tsx  header.tsx  icons.tsx  recent-activity.tsx  sales-chart.tsx  sidebar.tsx  utils.ts
template-files/forms/: FormField.tsx  FormInput.tsx  FormProvider.tsx
template-files/i18n/: i18n.config.js
template-files/nextjs/: app-layout.tsx  dashboard-layout.tsx  dashboard-page.tsx  error.tsx  loading.tsx  page.tsx  providers.tsx
template-files/state/: example-store.ts
template-files/tailwind/: globals.css  tailwind.config.js
template-files/testing/: jest.config.js  jest.setup.js  test-utils.tsx
(+71 files in other folders)
