[package]
name = "architech"
version = "0.2.0"
description = "A Tauri and Next.js template"
authors = ["you"]
edition = "2021"
default-run = "architech"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# This is the name that the test_generation binary is using
name = "architech"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.5.1", features = ["devtools"] }
tauri-plugin-opener = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-shell = "2.0.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
regex = "1.10.2"
dirs = "6.0.0"
tokio = { version = "1.34", features = ["full"] }
async-trait = "0.1.74"
log = "0.4"
env_logger = "0.10.1"
futures = "0.3.29"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
lazy_static = "1.4.0"
once_cell = "1.21.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
